Resolves: tdf#120031 skip min/max for empty string in GetSavedIntValue

so "" turns into 0, which is which we want for the single use case here
in 6-1

Change-Id: I3e28b09e2ed99ab90583b087b4100efe4935414a